--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "classnames": "^2.2.6",
+    "crypto-js": "^4.1.1",
     "d3-fetch": "^2.0.0",
     "d3-geo": "^3.0.1",
     "d3-scale": "^3.2.3",
