--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "source-map-explorer": "^2.5.2",
     "tailwind-safelist-generator": "^0.1.2",
     "twin.macro": "^3.0.0-rc.1",
+    "use-debounce": "^8.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.10"
   },
