--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.3",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.31.0",
+    "@azure/msal-react": "^1.4.10",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@popperjs/core": "^2.9.2",
     "@react-icons/all-files": "^4.1.0",
+    "@react-oauth/google": "^0.4.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.5.2",
@@ -25,11 +28,14 @@
     "d3-geo": "^3.0.1",
     "d3-scale": "^3.2.3",
     "dayjs": "^1.11.5",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "gapi-script": "^1.2.0",
     "history": "^5.0.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.6.3",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "postcss-import": "^14.0.0",
@@ -38,6 +44,8 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-highlight-words": "^0.18.0",
     "react-html-parser": "^2.0.2",
     "react-i18next": "^11.15.1",
