--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_API_KEY="AIzaSyD5Gch3O_OExW-hiAQeIXhq1DPDgHIzkf0"
-REACT_APP_CLIENT_ID="598308384551-06t278a29gv4gi9596prrm1ao6doc275.apps.googleusercontent.com"
-REACT_APP_DROPBOX_CLIENTID="pid9bkucrnak45d"
-REACT_APP_DROPBOX_SECRETE="48o12v5ypz98jg5"
+REACT_APP_API_KEY="AIzaSyA5JwftBtU3eXXTleuYezFWZTANyakmaNw"
+REACT_APP_CLIENT_ID="436505811511-7o0gn8mvbf2oi3de520ot4b0ldjmlfkm.apps.googleusercontent.com"
+REACT_APP_DROPBOX_CLIENTID="86ncnawustllmmb"
+REACT_APP_DROPBOX_SECRETE="asri4hnbe2zze8p"
 REACT_APP_NODE_ENV="PROD"
