--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3-fetch": "^2.0.0",
     "d3-geo": "^3.0.1",
     "d3-scale": "^3.2.3",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
@@ -38,10 +39,12 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "postcss-import": "^14.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.0.0",
+    "react-big-calendar": "^1.5.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
