change in response

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_API_KEY="AIzaSyA5JwftBtU3eXXTleuYezFWZTANyakmaNw"
 REACT_APP_CLIENT_ID="436505811511-7o0gn8mvbf2oi3de520ot4b0ldjmlfkm.apps.googleusercontent.com"
 REACT_APP_DROPBOX_CLIENTID="86ncnawustllmmb"
 REACT_APP_DROPBOX_SECRETE="asri4hnbe2zze8p"
-REACT_APP_NODE_ENV="PROD"
+REACT_APP_NODE_ENV="Prod"
