--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REACT_APP_DROPBOX_CLIENTID_PROD="86ncnawustllmmb"
 REACT_APP_DROPBOX_CLIENTID_DEV="and3gm0ck0xalgi"
 REACT_APP_DROPBOX_SECRETE_PROD="asri4hnbe2zze8p"
 REACT_APP_DROPBOX_SECRETE_DEV="ctytv1rmyo1zz4m"
-REACT_APP_NODE_ENV="prod"
+REACT_APP_NODE_ENV="dev"
 REACT_APP_GOOGLE_DEV_API_KEY="AIzaSyD5Gch3O_OExW-hiAQeIXhq1DPDgHIzkf0"
 REACT_APP_GOOGLE_DEV_CLIENT_ID="598308384551-06t278a29gv4gi9596prrm1ao6doc275.apps.googleusercontent.com"
 
