--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^7.2.8",
     "react-resize-detector": "^7.0.0",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.3",
