--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "yup": "^0.32.10"
   },
   "scripts": {
-    "start": "export HTTPS=true && SSL_CRT_FILE=cert.cer && run-p watch:css react-scripts:start",
+    "start": " run-p watch:css react-scripts:start",
     "build": "run-s build:css react-scripts:build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
