--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "private": true,
   "dependencies": {
+    "@atlaskit/theme": "^12.2.9",
     "@azure/msal-browser": "^2.31.0",
     "@azure/msal-react": "^1.4.10",
     "@fullcalendar/daygrid": "^5.10.1",
@@ -19,6 +20,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@vx/pattern": "0.0.199",
+    "@xstyled/styled-components": "^3.7.0",
     "apexcharts": "^3.35.2",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
@@ -29,6 +31,8 @@
     "d3-scale": "^3.2.3",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
+    "devextreme": "22.2",
+    "devextreme-react": "22.2",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -43,7 +47,7 @@
     "postcss-import": "^14.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-beautiful-dnd": "^13.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.5.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
@@ -62,7 +66,7 @@
     "react-redux": "^7.2.8",
     "react-resize-detector": "^7.0.0",
     "react-responsive-modal": "^6.4.1",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.3",
     "react-select": "^4.3.0",
@@ -70,14 +74,18 @@
     "react-syntax-highlighter": "^15.4.4",
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
+    "react-use-websocket": "^4.3.1",
     "react-window": "^1.8.6",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.0",
     "source-map-explorer": "^2.5.2",
+    "styled-components": "^5.3.6",
     "tailwind-safelist-generator": "^0.1.2",
     "twin.macro": "^3.0.0-rc.1",
     "use-debounce": "^8.0.4",
     "web-vitals": "^2.1.4",
+    "ws": "^8.12.1",
     "yup": "^0.32.10"
   },
   "scripts": {
