--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@atlaskit/theme": "^12.2.9",
     "@azure/msal-browser": "^2.31.0",
     "@azure/msal-react": "^1.4.10",
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
@@ -40,10 +42,13 @@
     "history": "^5.0.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.6.3",
+    "install": "^0.13.0",
+    "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
+    "npm": "^9.6.0",
     "postcss-import": "^14.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -51,6 +56,8 @@
     "react-big-calendar": "^1.5.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-dropzone": "^14.2.3",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-highlight-words": "^0.18.0",
@@ -81,6 +88,9 @@
     "socket.io-client": "^4.6.0",
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.6",
+    "survey-core": "^1.9.75",
+    "survey-react-ui": "^1.9.75",
+    "surveyjs-widgets": "^1.9.76",
     "tailwind-safelist-generator": "^0.1.2",
     "twin.macro": "^3.0.0-rc.1",
     "use-debounce": "^8.0.4",
