--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ REACT_APP_NODE_ENV="prod"
 REACT_APP_GOOGLE_DEV_API_KEY="AIzaSyD5Gch3O_OExW-hiAQeIXhq1DPDgHIzkf0"
 REACT_APP_GOOGLE_DEV_CLIENT_ID="598308384551-06t278a29gv4gi9596prrm1ao6doc275.apps.googleusercontent.com"
 GENERATE_SOURCEMAP=false
+REACT_APP_SOCKET_URL=https://app.productivitys.com/socket
